Fixed GenOOMCrashClass test to work with modular jdk